--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@types/node": "^22.7.5",
-    "typescript": "^5.6.2"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
